<resources>
    <string name="app_name" translatable="false">CpuThrolling</string>
    <string name="hard_soft_info">Hardware and Software Information</string>
    <string name="serial">SERIAL: </string>
    <string name="model">MODEL: </string>
    <string name="id">ID: </string>
    <string name="manufacturer">MANUFACTURER: </string>
    <string name="brand">BRAND: </string>
    <string name="type">TYPE: </string>
    <string name="user">USER: </string>
    <string name="incremental">INCREMENTAL: </string>
    <string name="sdk">SDK: </string>
    <string name="board">BOARD: </string>
    <string name="host">HOST: </string>
    <string name="fingerprint">FINGERPRINT: </string>
    <string name="versioncode">VERSION CODE: </string>

    <string name="battery_temperature">Battery Temperature:  </string>
    <string name="battery_voltage">Battery Voltage:  </string>
    <string name="battery_health">Battery Health:  </string>
    <string name="battery_scale">Battery Scale:  </string>
    <string name="battery_level">Battery Level:  </string>
    <string name="power_plug">Power Plug:  </string>
    <string name="battery_status">Battery Status:  </string>

    <string name="charging">Charging</string>
    <string name="not_charging">Not Charging</string>
    <string name="ac_power">AC Power</string>
    <string name="usb_plugged">USB Plugged</string>
    <string name="cold">Cold</string>
    <string name="dead">Dead</string>
    <string name="good">Good</string>
    <string name="overheat">Overheat</string>
    <string name="over_voltage">Over Voltage</string>
    <string name="not_plugged">Not Plugged</string>
    <string name="unknown">Unknown Health</string>
    <string name="unspecified_failure">Unspecified failure</string>
    <string name="wireless_charging">Wireless Charging</string>


    <!-- Custom package lists -->

    <!-- Preference -->

    <string name="Cpuinformation">Cpu \n information</string>
    <string name="CpuFrequency">Cpu \n Frequency</string>
    <string name="otherinformation">other\ninformation</string>
    <string name="cpu_information">CPU information</string>
    <string name="cpu_frequency">CPU frequency</string>
    <string name="other_information">Other information</string>
    <string name="ram_n_info">RAM\nINFO</string>
    <string name="device_n_info">DEVICE\nINFO</string>
    <string name="battery_n_info">BATTERY\nINFO</string>
    <string name="phone_nsensors">PHONE\nSENSORS</string>
    <string name="battery_information">Battery information</string>
    <string name="ram_information">Ram Information</string>
    <string name="total_memory">Total Memory</string>
    <string name="free_memory">Available \nMemory</string>
    <string name="runtimetotalmemory">Runtime \nTotal Memory</string>
    <string name="runtimemaxmemory">Runtime \nMax Memory</string>
    <string name="runtimefreememory">Runtime\nFree Memory </string>
    <string name="phone_sensors">Phone Sensors</string>
</resources>