<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">


    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:weightSum="2"
        android:layout_marginTop="@dimen/_5sdp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/back_icn"
            android:layout_weight="0.2"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1.7"
            android:text="@string/ram_information"
            android:fontFamily="@font/robotomedium"
            android:textSize="@dimen/_15sdp"
            android:textColor="#070C2C"
            android:layout_gravity="center"
            android:gravity="center"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/line1"
        android:layout_marginTop="@dimen/_10sdp">
        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/ram_icn"
            android:background="@drawable/betteryinfo"
            android:padding="@dimen/_5sdp"
            android:elevation="@dimen/_30sdp"
            android:layout_centerHorizontal="true"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:backgroundTint="#F3F6FF"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_20sdp">
            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginVertical="@dimen/_2sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_memory"
                    android:fontFamily="@font/robotomedium"
                    android:textColor="#8291C1"
                    android:layout_weight="1"
                    android:textSize="@dimen/_12ssp"/>

                <TextView
                    android:id="@+id/total"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12ssp"
                    android:layout_below="@id/line1"
                    android:layout_gravity="center"
                    android:textColor="#8291C1"

                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"

                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginVertical="@dimen/_2sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/free_memory"
                    android:fontFamily="@font/robotomedium"
                    android:textColor="#8291C1"
                    android:layout_weight="1"
                    android:textSize="@dimen/_12ssp"/>

                <TextView
                    android:id="@+id/free"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_below="@id/line1"
                    android:gravity="center"
                    android:textColor="#8291C1"

                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginVertical="@dimen/_2sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/runtimetotalmemory"
                    android:fontFamily="@font/robotomedium"
                    android:textColor="#8291C1"
                    android:layout_weight="1"
                    android:textSize="@dimen/_12ssp"/>

                <TextView
                    android:id="@+id/RuntimeTotalMemory"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_below="@id/line1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="#8291C1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginVertical="@dimen/_2sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/runtimemaxmemory"
                    android:fontFamily="@font/robotomedium"
                    android:textColor="#8291C1"
                    android:layout_weight="1"
                    android:textSize="@dimen/_12ssp"/>

                <TextView
                    android:id="@+id/RuntimeMaxMemory"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_below="@id/line1"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:textColor="#8291C1"
                    android:layout_weight="1"
                    android:layout_height="match_parent"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginVertical="@dimen/_2sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/runtimefreememory"
                    android:fontFamily="@font/robotomedium"
                    android:textColor="#8291C1"
                    android:layout_weight="1"
                    android:textSize="@dimen/_12ssp"/>

                <TextView
                    android:id="@+id/RuntimeFreeMemory"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_below="@id/line1"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:textColor="#8291C1"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_height="match_parent"

                    />
            </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</RelativeLayout>