<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.activity.Cpu"
    android:padding="@dimen/_1sdp">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_5sdp"

        android:weightSum="2">

        <ImageView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:src="@drawable/back_icn" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_weight="1.7"
            android:gravity="center"
            android:fontFamily="@font/robotomedium"
            android:text="@string/other_information"
            android:textColor="#070C2C"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/line1"
        android:layout_marginTop="@dimen/_20sdp"
        android:weightSum="2"
        android:layout_marginStart="@dimen/_3sdp"
        android:padding="@dimen/_5sdp">

        <androidx.cardview.widget.CardView
            android:id="@+id/btndeviceinfo"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_15sdp"
            android:backgroundTint="#171B4E"
            android:paddingTop="@dimen/_20sdp">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/device_info_icn"
                android:background="@drawable/otherbutton"
               android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_2sdp"/>
            <TextView

                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/device_n_info"
                android:gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/robotomedium"


                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnRaminfo"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_15sdp"
            android:backgroundTint="#171B4E"
            android:paddingTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ram_icn"
                android:background="@drawable/otherbutton"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_2sdp"/>

            <TextView

                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/ram_n_info"
                android:gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/robotomedium"


                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/line2"
        android:weightSum="2"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_3sdp"
        android:padding="@dimen/_5sdp">

        <androidx.cardview.widget.CardView
            android:id="@+id/buttonBatteryTemp"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_15sdp"
            android:backgroundTint="#171B4E"
            android:paddingTop="@dimen/_20sdp">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/battery_info_icn"
                android:background="@drawable/otherbutton"
               android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_2sdp"/>
            <TextView

                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/battery_n_info"
                android:gravity="center"
                android:fontFamily="@font/robotomedium"
                android:textColor="@color/white"

                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnfilescan"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_15sdp"
            android:backgroundTint="#171B4E"
            android:paddingTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/sensors_icn"
                android:background="@drawable/otherbutton"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_2sdp"/>

            <TextView

                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/phone_nsensors"
                android:textColor="@color/white"
                android:fontFamily="@font/robotomedium"


                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>